--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,11 @@ jobs:
       with:
         toolchain: stable
         override: true
+    - name: Install SDKMAN!
+      run: |
+        curl -s "https://get.sdkman.io" | bash
+        source "$HOME/.sdkman/bin/sdkman-init.sh"
+        sdk version
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
