--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,8 @@ jobs:
         curl -s "https://get.sdkman.io" | bash
         source "$HOME/.sdkman/bin/sdkman-init.sh"
         sdk version
+    - name: Install JExtract!
+      run: sdk install jextract
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
