--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,23 @@
     "files.associations": {
         "webgpu.h": "c"
     },
-    "java.debug.settings.onBuildFailureProceed": true
+    "java.debug.settings.onBuildFailureProceed": true,
+    "java.completion.favoriteStaticMembers": [
+        "org.webgpu.extract.webgpu_h.*",
+        "org.junit.Assert.*",
+        "org.junit.Assume.*",
+        "org.junit.jupiter.api.Assertions.*",
+        "org.junit.jupiter.api.Assumptions.*",
+        "org.junit.jupiter.api.DynamicContainer.*",
+        "org.junit.jupiter.api.DynamicTest.*",
+        "org.mockito.Mockito.*",
+        "org.mockito.ArgumentMatchers.*",
+        "org.mockito.Answers.*"
+    ], 
+    "java.test.config": {
+        "env": {"WGPU_LOG": "debug"},
+        "console": "integratedTerminal"
+    },
+    "java.test.output": "both",
+    "java.test.log.level": "verbose"
 }
