--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,6 +31,7 @@ jobs:
         source "/home/runner/.sdkman/bin/sdkman-init.sh"
         sdk install jextract
         sdk install maven
+        mvn -B package --file pom.xml
         
 
    
@@ -40,8 +41,8 @@ jobs:
     #     java-version: '21'
     #     distribution: 'temurin'
     #     cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    # - name: Build with Maven
+    #   run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
