--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,10 @@ jobs:
     steps:
     
     - uses: actions/checkout@v4
+    - name: Checkout repo with submodules
+      uses: actions/checkout@v4
+      with:
+        submodules: true   # Recursively initialize submodules
     
     - name: Install SDKMAN!
       run: |
