--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,6 +35,7 @@ jobs:
         source "/home/runner/.sdkman/bin/sdkman-init.sh"
         sdk install jextract
         sdk install maven
+        yes | sdk install java 21.0.2-open
         mvn -B package --file pom.xml
         
 
